headear&sidepanel_styled

--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
+
     <title>Document</title>
 </head>
 <body>
+    <header class="header">
+        <div class="header__left-block">
+            <div class="header__logo">
+                <img src="icons/logo.svg" alt="Логотип">
+            </div>
+            <nav class="header__links">
+                <a href="#" class="header__link">Доставка питания</a>
+                <a href="#" class="header__link">Второй пункт</a>
+            </nav>
+        </div>
+        <div class="header__right-block">
+            <button class="btn btn_white" data-modal>Связаться с нами</button>
+        </div>
+    </header>
 
+    <section class="sidepanel">
+        <div class="sidepanel__text"><span>Социальные сети</span></div>
+        <div class="sidepanel__divider"></div>
+        <a href="#" class="sidepanel__icon">
+            <img src="icons/instagram.svg" alt="instagram">
+        </a>
+        <a href="#" class="sidepanel__icon">
+            <img src="icons/facebook.svg" alt="facebook">
+        </a>
+    </section>
     
 </body>
 </html>
