--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-
     <title>Document</title>
 </head>
 <body>
@@ -33,6 +32,117 @@
         <a href="#" class="sidepanel__icon">
             <img src="icons/facebook.svg" alt="facebook">
         </a>
+    </section>
+
+
+    <section class="preview">
+        <div class="bgc_blue"></div>
+        <div class="container">
+            <div class="tabcontainer">
+
+                <div class="tabcontent show">
+                    <img src="img/tabs/vegy.jpg" alt="vegy">
+                    <div class="tabcontent__descr">
+                        Меню "Фитнес" - это новый подход к приготовлению блюд: больше свежих овощей и фруктов. Для людей, которые интересуются спортом; активных и здоровых. Это абсолютно новый продукт с оптимальной ценой и высоким качеством!
+                    </div>
+                </div>
+
+                <div class="tabcontent">
+                    <img src="img/tabs/elite.jpg" alt="elite">
+                    <div class="tabcontent__descr">
+                        Меню “Премиум” - мы используем не только красивый дизайн упаковки, но и качественное исполнение блюд. Красная рыба, морепродукты, фрукты - ресторанное меню без похода в ресторан!                                     
+                    </div>
+                </div>
+
+                <div class="tabcontent">
+                    <img src="img/tabs/post.jpg" alt="post">
+                    <div class="tabcontent__descr">
+                        Наше специальное “Постное меню” - это тщательный подбор ингредиентов: полное отсутствие продуктов животного происхождения. Полная гармония с собой и природой в каждом элементе! Все будет Ом!                                     
+                    </div>
+                </div>
+
+                <div class="tabcontent">
+                    <img src="img/tabs/hamburger.jpg" alt="vegy">
+                    <div class="tabcontent__descr">
+                        Меню "Сбалансированное" - это соответствие вашего рациона всем научным рекомендациям. Мы тщательно просчитываем вашу потребность в к/б/ж/у и создаем лучшие блюда для вас.
+                    </div>
+                </div>
+
+                <div class="tabheader">
+                    <h3>Выберите стиль питания</h3>
+                    <div class="tabheader__items">
+                        <div class="tabheader__item tabheader__item_active">Фитнес</div>
+                        <div class="tabheader__item">Премиум</div>
+                        <div class="tabheader__item">Постное</div>
+                        <div class="tabheader__item">Сбалансированное</div>
+                    </div>
+                </div>
+            </div>
+            <div class="preview__life">Живи полной жизнью!</div>
+        </div>
+    </section>
+
+    <div class="divider"></div>
+
+    <section class="offer">
+        <div class="bgc_y"></div>
+        <div class="container">
+            <div class="offer__text">
+                <h2 class="title">Что мы можем вам предложить?</h2>
+                <div class="offer__descr">
+                    Наша основная идея - это правильное питание. Оно может быть простым и вкусным. Мы не просто доставка, мы сервис! Мы взяли на себя все расчеты БЖУ, калорийности, объемов порций и прочие важные, но скучные аспекты. Вам остается только полезная, сытная и правильная еда, которую мы привозим прямо под дверь.
+                </div>
+            </div>
+            <div class="offer__action">
+                <button class="btn btn_dark" data-modal>Связаться с нами</button>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="offer__advantages">
+                <h2>Быстро и полезно</h2>
+                <div class="offer__advantages-text">
+                    Готовка дома занимает много сил, времени и нервов. Мы привозим еду сразу на целый день, и ты можешь действовать так, как тебе удобно, не подстраиваясь ни под кого и будучи уверенным в качестве продукта!
+                </div>
+                <h2>Правильный рацион</h2>
+                <div class="offer__advantages-text">
+                    Мы разработали специальное меню, где учтены все нюансы правильного питания, от баланса БЖУ до их приготовления и дробления рациона.
+                </div>
+            </div>
+            <div class="offer__slider">
+
+                <div class="offer__slider-counter">
+                    <div class="offer__slider-prev">
+                        <img src="icons/left.svg" alt="prev">
+                    </div>
+                    <span id="current"></span>
+                    /
+                    <span id="total"></span>
+                    <div class="offer__slider-next">
+                        <img src="icons/right.svg" alt="next">
+                    </div>
+                </div>
+
+                <div class="offer__slider-wrapper">
+                    <div class="offer__slider-inner">
+                        <div class="offer__slide">
+                            <img src="img/slider/pepper.jpg" alt="pepper">
+                        </div>
+                        <div class="offer__slide">
+                            <img src="img/slider/food-12.jpg" alt="food">
+                        </div>
+                        <div class="offer__slide">
+                            <img src="img/slider/olive-oil.jpg" alt="oil">
+                        </div>
+                        <div class="offer__slide">
+                            <img src="img/slider/paprika.jpg" alt="paprika">
+                        </div> 
+                    </div>
+                </div>
+
+
+            </div>
+        </div>
     </section>
     
 </body>
