--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Food</title>
 </head>
 <body>
     <header class="header">
@@ -203,7 +203,7 @@
         <h2 class="title">Наше меню на день</h2>
         <div class="menu__field">
             <div class="container">
-                <div class="menu__item">
+                <!-- <div class="menu__item">
                     <img src="img/tabs/vegy.jpg" alt="vegy">
                     <h3 class="menu__item-subtitle">Меню "Фитнес"</h3>
                     <div class="menu__item-descr">Меню "Фитнес" - это новый подход к приготовлению блюд: больше свежих овощей и фруктов. Продукт активных и здоровых людей. Это абсолютно новый продукт с оптимальной ценой и высоким качеством!</div>
@@ -212,8 +212,8 @@
                         <div class="menu__item-cost">Цена:</div>
                         <div class="menu__item-total"><span>229</span> грн/день</div>
                     </div>
-                </div>
-                <div class="menu__item">
+                </div> -->
+                <!-- <div class="menu__item">
                     <img src="img/tabs/elite.jpg" alt="elite">
                     <h3 class="menu__item-subtitle">Меню “Премиум”</h3>
                     <div class="menu__item-descr">В меню “Премиум” мы используем не только красивый дизайн упаковки, но и качественное исполнение блюд. Красная рыба, морепродукты, фрукты - ресторанное меню без похода в ресторан!</div>
@@ -232,7 +232,7 @@
                         <div class="menu__item-cost">Цена:</div>
                         <div class="menu__item-total"><span>430</span> грн/день</div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
